# rust-gobang

./: Cargo.toml  README.md
src/: ai.rs  game.rs  main.rs
