[package]
edition = "2021"
name = "gobang"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.75", features = ["backtrace"]}
dialoguer = "0.11.0"
lazy_static = "1.4.0"
rand = "0.8"
rayon = "1.8.0"
